force-app/main/default/objects/sked__Resource__c/fields/CO_AP_Status__c.field-meta.xml
<CustomField>
    <fullName>CO_AP_Status__c</fullName>
    <description>Created as part of HRP-1522</description>
    <label>CO AP Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Error</fullName>
            </value>
            <value>
                <fullName>Processed</fullName>
            </value>
            <value>
                <fullName>Yet to process CO</fullName>
            </value>
            <value>
                <fullName>Yet to Process Totals</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>