force-app/main/default/objects/sked__Resource__c/fields/IsChangedEmploymentStatus__c.field-meta.xml
<CustomField>
    <fullName>IsChangedEmploymentStatus__c</fullName>
    <defaultValue>false</defaultValue>
    <description>HRP-12628: UL Push on BSF Resources Not Applying Due to Locking Issues</description>
    <label>Is Employment Status Changes</label>
    <type>Checkbox</type>
</CustomField>