force-app/main/default/objects/sked__Resource__c/fields/sked__Alias__c.field-meta.xml
<CustomField>
    <fullName>sked__Alias__c</fullName>
    <label>Alias</label>
    <length>20</length>
    <type>Text</type>
</CustomField>