force-app/main/default/objects/sked__Resource__c/fields/sked__Auto_Schedule__c.field-meta.xml
<CustomField>
    <fullName>sked__Auto_Schedule__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Auto Schedule</label>
    <type>Checkbox</type>
</CustomField>