force-app/main/default/objects/sked__Resource__c/fields/sked__Category__c.field-meta.xml
<CustomField>
    <fullName>sked__Category__c</fullName>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>sked__Resource_Type__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Employee</fullName>
            </value>
            <value>
                <fullName>Volunteer</fullName>
            </value>
            <value>
                <fullName>Bus</fullName>
            </value>
            <value>
                <fullName>Cargo Van</fullName>
            </value>
            <value>
                <fullName>ProMaster</fullName>
            </value>
            <value>
                <fullName>Trailer</fullName>
            </value>
            <value>
                <fullName>Truck</fullName>
            </value>
            <value>
                <fullName>Equipment</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>