force-app/main/default/objects/sked__Resource__c/fields/sked__Country_Code__c.field-meta.xml
<CustomField>
    <fullName>sked__Country_Code__c</fullName>
    <description>The Country Code the Resource is situated (used for phone number validation / processing)</description>
    <label>Country Code</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>AU</fullName>
            </value>
            <value>
                <fullName>NZ</fullName>
            </value>
            <value>
                <fullName>UK</fullName>
            </value>
            <value>
                <fullName>US</fullName>
            </value>
            <value>
                <fullName>CA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>