force-app/main/default/objects/sked__Resource__c/fields/sked__Email__c.field-meta.xml
<CustomField>
    <fullName>sked__Email__c</fullName>
    <label>Email</label>
    <type>Email</type>
</CustomField>