force-app/main/default/objects/sked__Resource__c/fields/sked__Employment_Type__c.field-meta.xml
<CustomField>
    <fullName>sked__Employment_Type__c</fullName>
    <label>Employment Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Full-time</fullName>
            </value>
            <value>
                <fullName>Part-time</fullName>
            </value>
            <value>
                <fullName>Volunteer</fullName>
            </value>
            <value>
                <fullName>Agency</fullName>
                <isActive>false</isActive>
                <label>Agency</label>
            </value>
            <value>
                <fullName>Casual</fullName>
                <isActive>false</isActive>
                <label>Casual</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>