force-app/main/default/objects/sked__Resource__c/fields/sked__Home_Address__c.field-meta.xml
<CustomField>
    <fullName>sked__Home_Address__c</fullName>
    <label>Home Address</label>
    <type>TextArea</type>
</CustomField>