force-app/main/default/objects/sked__Resource__c/fields/sked__Hourly_Rate__c.field-meta.xml
<CustomField>
    <fullName>sked__Hourly_Rate__c</fullName>
    <label>Hourly Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>