force-app/main/default/objects/sked__Resource__c/fields/sked__Is_Active__c.field-meta.xml
<CustomField>
    <fullName>sked__Is_Active__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>