force-app/main/default/objects/sked__Resource__c/fields/sked__Mobile_Phone__c.field-meta.xml
<CustomField>
    <fullName>sked__Mobile_Phone__c</fullName>
    <label>Mobile Phone</label>
    <type>Phone</type>
</CustomField>