force-app/main/default/objects/sked__Resource__c/fields/sked__Primary_Phone__c.field-meta.xml
<CustomField>
    <fullName>sked__Primary_Phone__c</fullName>
    <label>Primary Phone</label>
    <type>Phone</type>
</CustomField>