force-app/main/default/objects/sked__Resource__c/fields/sked__Primary_Region__c.field-meta.xml
<CustomField>
    <fullName>sked__Primary_Region__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Primary Region</label>
    <referenceTo>sked__Region__c</referenceTo>
    <relationshipLabel>Resources</relationshipLabel>
    <relationshipName>Resources</relationshipName>
    <type>Lookup</type>
</CustomField>