force-app/main/default/objects/sked__Resource__c/fields/sked__Resource_Type__c.field-meta.xml
<CustomField>
    <fullName>sked__Resource_Type__c</fullName>
    <description>Is the resource a human or otherwise</description>
    <label>Resource Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Person</fullName>
            </value>
            <value>
                <fullName>Asset</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>