force-app/main/default/objects/sked__Resource__c/fields/sked__UniqueKey__c.field-meta.xml
<CustomField>
    <fullName>sked__UniqueKey__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>A copy of UserId, populated by a trigger. This is to ensure that each user will have at most one associated resource.</description>
    <label>UniqueKey</label>
    <length>40</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>