force-app/main/default/objects/sked__Resource__c/fields/sked__Weekly_Hours__c.field-meta.xml
<CustomField>
    <fullName>sked__Weekly_Hours__c</fullName>
    <defaultValue>40</defaultValue>
    <description>The default hours per week that a human resource works</description>
    <inlineHelpText>The default hours per week that a human resource works</inlineHelpText>
    <label>Weekly Hours</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>