force-app/main/default/objects/sked__Resource__c/fields/sked__Working_Hour_Type__c.field-meta.xml
<CustomField>
    <fullName>sked__Working_Hour_Type__c</fullName>
    <label>Working Hour Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Availability</fullName>
            </value>
            <value>
                <fullName>Shift</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>