force-app/main/default/objects/sked__Resource__c/fields/sked__Working_Hours_Max__c.field-meta.xml
<CustomField>
    <fullName>sked__Working_Hours_Max__c</fullName>
    <description>When this is set, the resource has a maximum working time over the period defined by Working Hours Time Period and Working Hours Start.</description>
    <label>Working Hours Max</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>