force-app/main/default/objects/sked__Resource__c/fields/sked__Working_Hours_Min__c.field-meta.xml
<CustomField>
    <fullName>sked__Working_Hours_Min__c</fullName>
    <description>When this is set, the resource has a minimum working time over the period defined by Working Hours Time Period and Working Hours Start.</description>
    <label>Working Hours Min</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>