force-app/main/default/objects/sked__Resource__c/fields/sked__Working_Hours_Start__c.field-meta.xml
<CustomField>
    <fullName>sked__Working_Hours_Start__c</fullName>
    <description>When this value is set only apply working hours starting from this point in time (inclusive).</description>
    <label>Working Hours Start</label>
    <type>Date</type>
</CustomField>