force-app/main/default/objects/sked__Resource__c/fields/sked__Working_Hours_Time_Period__c.field-meta.xml
<CustomField>
    <fullName>sked__Working_Hours_Time_Period__c</fullName>
    <description>A picklist defining the period over which the resource&#39;s working hours constraints are applied.</description>
    <label>Working Hours Time Period</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Week</fullName>
            </value>
            <value>
                <fullName>TwoWeeks</fullName>
            </value>
            <value>
                <fullName>FourWeeks</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>