force-app/main/default/objects/sked__Resource__c/fields/sked_Address_Referenced_for_Scheduling__c.field-meta.xml
<CustomField>
    <fullName>sked_Address_Referenced_for_Scheduling__c</fullName>
    <label>Address Referenced for Scheduling</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Home</fullName>
            </value>
            <value>
                <fullName>Work</fullName>
                <default>true</default>
                <label>Work</label>
            </value>
            <value>
                <fullName>Satellite</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>