force-app/main/default/objects/sked__Resource__c/fields/sked_Anticipated_Leave_Return_Date__c.field-meta.xml
<CustomField>
    <fullName>sked_Anticipated_Leave_Return_Date__c</fullName>
    <label>Anticipated Leave Return Date</label>
    <type>Date</type>
</CustomField>