force-app/main/default/objects/sked__Resource__c/fields/sked_ARC_Region_Name__c.field-meta.xml
<CustomField>
    <fullName>sked_ARC_Region_Name__c</fullName>
    <formula>sked__Primary_Region__r.sked_Biomed_Collection_Op_Center__r.sked_Territory__r.sked_Parent__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ARC Region Name</label>
    <type>Text</type>
</CustomField>