force-app/main/default/objects/sked__Resource__c/fields/sked_Asset_Type__c.field-meta.xml
<CustomField>
    <fullName>sked_Asset_Type__c</fullName>
    <label>Asset Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>sked_Asset_Type</valueSetName>
    </valueSet>
</CustomField>