force-app/main/default/objects/sked__Resource__c/fields/sked_Average_Travel_Time_Per_Drive__c.field-meta.xml
<CustomField>
    <fullName>sked_Average_Travel_Time_Per_Drive__c</fullName>
    <label>Average Travel Time Per Drive</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>