force-app/main/default/objects/sked__Resource__c/fields/sked_Biomed_Collection_Op_Center_Name__c.field-meta.xml
<CustomField>
    <fullName>sked_Biomed_Collection_Op_Center_Name__c</fullName>
    <formula>sked__Primary_Region__r.sked_Biomed_Collection_Op_Center__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Biomed Collection Op (Center) Name</label>
    <type>Text</type>
</CustomField>