force-app/main/default/objects/sked__Resource__c/fields/sked_Collection_Operation_Id__c.field-meta.xml
<CustomField>
    <fullName>sked_Collection_Operation_Id__c</fullName>
    <formula>CASESAFEID(sked__Primary_Region__r.sked_Biomed_Collection_Op_Center__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Collection Operation Id</label>
    <type>Text</type>
</CustomField>