force-app/main/default/objects/sked__Resource__c/fields/sked_Collection_Operation_ID_Staging__c.field-meta.xml
<CustomField>
    <fullName>sked_Collection_Operation_ID_Staging__c</fullName>
    <label>Collection Operation ID (Staging)</label>
    <length>18</length>
    <type>Text</type>
</CustomField>