force-app/main/default/objects/sked__Resource__c/fields/sked_Collection_Operation_Name_Staging__c.field-meta.xml
<CustomField>
    <fullName>sked_Collection_Operation_Name_Staging__c</fullName>
    <label>Collection Operation Name (Staging)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>