force-app/main/default/objects/sked__Resource__c/fields/sked_Daily_Time_Off_Hours__c.field-meta.xml
<CustomField>
    <fullName>sked_Daily_Time_Off_Hours__c</fullName>
    <defaultValue>8</defaultValue>
    <label>Daily Time Off Hours</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>