force-app/main/default/objects/sked__Resource__c/fields/sked_Dedicated_to_Site__c.field-meta.xml
<CustomField>
    <fullName>sked_Dedicated_to_Site__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Changed field label as part of HRP-4075</description>
    <label>Dedicated to Site (machines only)</label>
    <referenceTo>sked__Location__c</referenceTo>
    <relationshipLabel>Resources</relationshipLabel>
    <relationshipName>sked_Resources</relationshipName>
    <type>Lookup</type>
</CustomField>