force-app/main/default/objects/sked__Resource__c/fields/sked_Distance_Home_to_Work__c.field-meta.xml
<CustomField>
    <fullName>sked_Distance_Home_to_Work__c</fullName>
    <description>Distance between the Resources Home and Work Geolocations.</description>
    <label>Home to Work Distance (Miles)</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>