force-app/main/default/objects/sked__Resource__c/fields/sked_eBDR_ID__c.field-meta.xml
<CustomField>
    <fullName>sked_eBDR_ID__c</fullName>
    <label>eBDR ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>