force-app/main/default/objects/sked__Resource__c/fields/sked_Effective_Date__c.field-meta.xml
<CustomField>
    <fullName>sked_Effective_Date__c</fullName>
    <label>Effective Date</label>
    <type>Date</type>
</CustomField>