force-app/main/default/objects/sked__Resource__c/fields/sked_Element_Unit__c.field-meta.xml
<CustomField>
    <fullName>sked_Element_Unit__c</fullName>
    <label>Element Unit#</label>
    <length>255</length>
    <type>Text</type>
</CustomField>