force-app/main/default/objects/sked__Resource__c/fields/sked_Employee_ID__c.field-meta.xml
<CustomField>
    <fullName>sked_Employee_ID__c</fullName>
    <externalId>true</externalId>
    <inlineHelpText>Workday External ID</inlineHelpText>
    <label>Employee ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>