force-app/main/default/objects/sked__Resource__c/fields/sked_Employment_Status__c.field-meta.xml
<CustomField>
    <fullName>sked_Employment_Status__c</fullName>
    <label>Employment Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Inactive</fullName>
            </value>
            <value>
                <fullName>Leave</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>