force-app/main/default/objects/sked__Resource__c/fields/sked_Employment_Subtype__c.field-meta.xml
<CustomField>
    <fullName>sked_Employment_Subtype__c</fullName>
    <label>Employment Subtype</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Employment Subtype 1</fullName>
            </value>
            <value>
                <fullName>Employment Subtype 2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>