force-app/main/default/objects/sked__Resource__c/fields/sked_FCC_Code__c.field-meta.xml
<CustomField>
    <fullName>sked_FCC_Code__c</fullName>
    <label>FCC Code</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>83140</fullName>
            </value>
            <value>
                <fullName>83340</fullName>
            </value>
            <value>
                <fullName>83347</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>