force-app/main/default/objects/sked__Resource__c/fields/sked_FCC_Code_Description__c.field-meta.xml
<CustomField>
    <fullName>sked_FCC_Code_Description__c</fullName>
    <label>FCC Code Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>