force-app/main/default/objects/sked__Resource__c/fields/sked_First_Name__c.field-meta.xml
<CustomField>
    <fullName>sked_First_Name__c</fullName>
    <label>First Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>