force-app/main/default/objects/sked__Resource__c/fields/sked_Future_Inactive_Date__c.field-meta.xml
<CustomField>
    <fullName>sked_Future_Inactive_Date__c</fullName>
    <label>Future Inactive Date</label>
    <type>Date</type>
</CustomField>