force-app/main/default/objects/sked__Resource__c/fields/sked_HH__c.field-meta.xml
<CustomField>
    <fullName>sked_HH__c</fullName>
    <label>HH</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>