force-app/main/default/objects/sked__Resource__c/fields/sked_Hire_Date__c.field-meta.xml
<CustomField>
    <fullName>sked_Hire_Date__c</fullName>
    <label>Hire Date</label>
    <type>Date</type>
</CustomField>