force-app/main/default/objects/sked__Resource__c/fields/sked_Home_Address_2__c.field-meta.xml
<CustomField>
    <fullName>sked_Home_Address_2__c</fullName>
    <label>Home Address 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>