force-app/main/default/objects/sked__Resource__c/fields/sked_Home_Phone__c.field-meta.xml
<CustomField>
    <fullName>sked_Home_Phone__c</fullName>
    <label>Home Phone</label>
    <type>Phone</type>
</CustomField>