force-app/main/default/objects/sked__Resource__c/fields/sked_Home_State__c.field-meta.xml
<CustomField>
    <fullName>sked_Home_State__c</fullName>
    <label>Home State</label>
    <length>255</length>
    <type>Text</type>
</CustomField>