force-app/main/default/objects/sked__Resource__c/fields/sked_Home_Zip_Code__c.field-meta.xml
<CustomField>
    <fullName>sked_Home_Zip_Code__c</fullName>
    <label>Home Zip Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>