force-app/main/default/objects/sked__Resource__c/fields/sked_Is_Pooled__c.field-meta.xml
<CustomField>
    <fullName>sked_Is_Pooled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Pooled</label>
    <type>Checkbox</type>
</CustomField>