force-app/main/default/objects/sked__Resource__c/fields/sked_Is_Self_Call_Out__c.field-meta.xml
<CustomField>
    <fullName>sked_Is_Self_Call_Out__c</fullName>
    <formula>sked__User__c == CreatedById</formula>
    <label>Self Call Out</label>
    <type>Checkbox</type>
</CustomField>