force-app/main/default/objects/sked__Resource__c/fields/sked_Last_Date_Staffed_in_Specified_Role__c.field-meta.xml
<CustomField>
    <fullName>sked_Last_Date_Staffed_in_Specified_Role__c</fullName>
    <label>Last Date Staffed in Specified Role</label>
    <type>Date</type>
</CustomField>