force-app/main/default/objects/sked__Resource__c/fields/sked_Liftgate__c.field-meta.xml
<CustomField>
    <fullName>sked_Liftgate__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Liftgate</label>
    <type>Checkbox</type>
</CustomField>