force-app/main/default/objects/sked__Resource__c/fields/sked_Line_of_Service__c.field-meta.xml
<CustomField>
    <fullName>sked_Line_of_Service__c</fullName>
    <label>Line of Service</label>
    <length>255</length>
    <type>Text</type>
</CustomField>