force-app/main/default/objects/sked__Resource__c/fields/sked_Logon_User_Name__c.field-meta.xml
<CustomField>
    <fullName>sked_Logon_User_Name__c</fullName>
    <inlineHelpText>Used for single sign-on</inlineHelpText>
    <label>Logon User Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>