force-app/main/default/objects/sked__Resource__c/fields/sked_Long_Desc__c.field-meta.xml
<CustomField>
    <fullName>sked_Long_Desc__c</fullName>
    <label>Long Desc</label>
    <length>255</length>
    <type>Text</type>
</CustomField>