force-app/main/default/objects/sked__Resource__c/fields/sked_Manual_Ranking_Priority__c.field-meta.xml
<CustomField>
    <fullName>sked_Manual_Ranking_Priority__c</fullName>
    <inlineHelpText>This value will be referenced in the case where this resource has the same hire date as another resource in the same role.</inlineHelpText>
    <label>Manual Ranking Priority</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>