force-app/main/default/objects/sked__Resource__c/fields/sked_Max_Consecutive_Days_per_week__c.field-meta.xml
<CustomField>
    <fullName>sked_Max_Consecutive_Days_per_week__c</fullName>
    <label>Max Consecutive Days per week</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>