force-app/main/default/objects/sked__Resource__c/fields/sked_Max_Hours_Per_Weekend__c.field-meta.xml
<CustomField>
    <fullName>sked_Max_Hours_Per_Weekend__c</fullName>
    <defaultValue>15</defaultValue>
    <label>Max Hours Per Weekend</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>