force-app/main/default/objects/sked__Resource__c/fields/sked_Max_Overtime_Hours__c.field-meta.xml
<CustomField>
    <fullName>sked_Max_Overtime_Hours__c</fullName>
    <label>Max Overtime Hours</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>