force-app/main/default/objects/sked__Resource__c/fields/sked_Max_Travel_Time__c.field-meta.xml
<CustomField>
    <fullName>sked_Max_Travel_Time__c</fullName>
    <label>Max Travel Time - Minutes One Way</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>