force-app/main/default/objects/sked__Resource__c/fields/sked_Maximum_Travel_Radius__c.field-meta.xml
<CustomField>
    <fullName>sked_Maximum_Travel_Radius__c</fullName>
    <label>Maximum Travel Radius (miles)</label>
    <precision>18</precision>
    <scale>8</scale>
    <type>Number</type>
</CustomField>