force-app/main/default/objects/sked__Resource__c/fields/sked_Min_Hours_Per_Week__c.field-meta.xml
<CustomField>
    <fullName>sked_Min_Hours_Per_Week__c</fullName>
    <defaultValue>35</defaultValue>
    <label>Min Hours Per Week</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>