force-app/main/default/objects/sked__Resource__c/fields/sked_Min_Working_Days_Per_Week__c.field-meta.xml
<CustomField>
    <fullName>sked_Min_Working_Days_Per_Week__c</fullName>
    <label>Minimum Number of Workdays per Week</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
            <value>
                <fullName>6</fullName>
            </value>
            <value>
                <fullName>7</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>