force-app/main/default/objects/sked__Resource__c/fields/sked_Mobile_Type__c.field-meta.xml
<CustomField>
    <fullName>sked_Mobile_Type__c</fullName>
    <label>Mobile Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Inside</fullName>
            </value>
            <value>
                <fullName>Outside</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>