force-app/main/default/objects/sked__Resource__c/fields/sked_Overtime_Threshold__c.field-meta.xml
<CustomField>
    <fullName>sked_Overtime_Threshold__c</fullName>
    <label>Overtime Threshold</label>
    <type>Time</type>
</CustomField>