force-app/main/default/objects/sked__Resource__c/fields/sked_Planned_Termination_Date__c.field-meta.xml
<CustomField>
    <fullName>sked_Planned_Termination_Date__c</fullName>
    <label>Planned Termination Date</label>
    <type>Date</type>
</CustomField>