force-app/main/default/objects/sked__Resource__c/fields/sked_Pres_Donor_Capacity__c.field-meta.xml
<CustomField>
    <fullName>sked_Pres_Donor_Capacity__c</fullName>
    <label>Pres Donor Capacity</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>