force-app/main/default/objects/sked__Resource__c/fields/sked_Primary_Phone_Type__c.field-meta.xml
<CustomField>
    <fullName>sked_Primary_Phone_Type__c</fullName>
    <label>Primary Phone Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Home Phone</fullName>
            </value>
            <value>
                <fullName>Work Phone</fullName>
            </value>
            <value>
                <fullName>Mobile Phone</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>